FIX,ADD,IMP,ULTIMOS CAMBIOS EN RECURSOS HUMANOS Y UNIDAD DE COMPRAS 19 DE SEPTIEMBRE 2014

--- a/recursos_humanos/views/concepts.xml
+++ b/recursos_humanos/views/concepts.xml
@@ -75,7 +75,7 @@
 					    <font style="color:white">__</font>
 					    <field name="c_integral"/>
 					    <font style="color:white">__</font>
-					    <b>Bono vacaciona:</b>
+					    <b>Bono vacacional:</b>
 					    <font style="color:white">__</font>
 					    <field name="b_vac"/>
 					    <font style="color:white">__</font>
