--- a/recursos_humanos/static/src/css/style.css
+++ b/recursos_humanos/static/src/css/style.css
@@ -67,13 +67,10 @@
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-/*.openerp .oe_login .oe_login_bottom {
-    background-color: #8a0e0e;
-    background-image: linear-gradient(to bottom, #61b7d3, rgba(6, 96, 95, 0.56));
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    right: 0;
-    text-shadow: 0 1px 1px #999999;
-    top: 50%;
-}*/
+.openerp button.detallado {
+	background-color: white;
+	color: #000000;
+	font-weight: bold;
+	background-image: linear-gradient(to bottom, #B4C7DD, #5F8DC1);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 1px rgba(155, 155, 155, 0.4) inset;
+}
